--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,16 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                    <suite.file>${project.basedir}/src/test/resources/hw1/add-and-subtract-operations-suite.xml</suite.file>
+                    <suite.file>${project.basedir}/src/test/resources/hw2/all-tests-suite.xml</suite.file>
+            </properties>
+        </profile>
+        <profile>
+            <id>add-and-subtract</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <suite.file>${project.basedir}/src/test/resources/hw1/add-and-subtract-operations-suite.xml</suite.file>
             </properties>
         </profile>
         <profile>
