--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <suite.file>${project.basedir}/src/test/resources/hw3/all-tests-suite.xml</suite.file>
+            </properties>
+        </profile>
+        <profile>
+            <id>hw2</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
                     <suite.file>${project.basedir}/src/test/resources/hw2/all-tests-suite.xml</suite.file>
             </properties>
         </profile>
@@ -70,7 +79,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
