add more properties

--- a/config.properties
+++ b/config.properties
@@ -2,3 +2,5 @@ username=Roman
 password=Jdi1234
 baseurl=https://jdi-testing.github.io/jdi-light/
 fullusername=ROMAN IOVLEV
+indexpagepath=index.html
+difelementspagepath=different-elements.html
