--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <suite.file>${project.basedir}/src/test/resources/hw5/all-tests-suite.xml</suite.file>
+            </properties>
+        </profile>
+        <profile>
+            <id>hw4</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
                 <suite.file>${project.basedir}/src/test/resources/hw4/all-tests-suite.xml</suite.file>
             </properties>
         </profile>
