--- a/config.properties
+++ b/config.properties
@@ -4,3 +4,4 @@ baseurl=https://jdi-testing.github.io/jdi-light/
 fullusername=ROMAN IOVLEV
 indexpagepath=index.html
 difelementspagepath=different-elements.html
+userpagepath=user-table.html
